dist/media/Ingress.sabnzbd.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sabnzbd
  namespace: media
spec:
  rules:
    - host: sabnzbd.cmdcentral.xyz
      http:
        paths:
          - backend:
              service:
                name: sabnzbd
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - sabnzbd.cmdcentral.xyz
      secretName: media-tls
